# CUDA_kernels

./: CMakeLists.txt  README.md
docs/: roadmap.md
include/: cuda_utils.cuh  cuda_utils.h  kernels.h  timer.h
src/: kernels.cpp  main.cpp
src/elementwise/: CMakeLists.txt  elementwise.cu  elementwise.md  elementwise_add.cu  gelu.cu  sigmoid.cu
src/gemm/: CMakeLists.txt  gemm.md  sgemm.cu
src/problems/matrix_add/: matrix_add_naive.cu
src/problems/sgemm/: sgemm_naive.cu
src/reduce/: CMakeLists.txt  reduce.md  reduce_max.cu  reduce_sum.cu  softmax.cu  softmax.py
src/transpose/: CMakeLists.txt  transpose.cu  transpose.md
